# uAgents

./: .gitignore  .pylintrc  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPING.md  HISTORY.md  ISSUES_TEMPLATE.md  PULL_REQUESTS_TEMPLATE.md  README.md  SECURITY.md  SECURITY.md   agent1q06rx0v89e_data.json  agent1q2xrkwq8rd_data.json  agent1qd75khc4vz_data.json  agent1qglvs0smx3_data.json  app.py  code snippet.py  data.json  generate_api_docs.py  issues_template.md  mkdocs.yml  movie details.py  moviedatabase.py  movies.py  notifier.py  project.json  pyproject.toml
integrations/NCERT-Tutor/: .gitignore  Dockerfile  README.md  project.json  pull-req.md  pyproject.toml
integrations/Recipe-from-food-images/: pyproject.toml  readme.md
integrations/agent-token-payments/: main.py  pyproject.toml
integrations/bert-base-cased/: README.md  pyproject.toml
integrations/bert-base-cased/src/: main.py
integrations/code-navigator/: README.md  agent.py  chain.py  main.py  pyproject.toml  utils.py
integrations/distilgpt2/: README.md  project.json  pyproject.toml
integrations/fetch-ai-engine/: README.md  project.json  pyproject.toml
integrations/fetch-ai-engine/examples/: simple_agent.py
integrations/fetch-holiday/: README.md  project.json  pyproject.toml
integrations/fetchai_blockchain_block_time/: README.md  pyproject.toml
integrations/fraud_detection/: README.md  pyproject.toml  requirements.txt
integrations/fraud_detection/src/: app.py  model.pkl  preproses.pkl
integrations/langchain-rag/: README.md  project.json  pyproject.toml
integrations/mobility-integrations/: README.md  project.json  pyproject.toml
integrations/mobility-integrations/src/: main.py
integrations/multi-agent-adapter/: README.md  project.json  pyproject.toml
integrations/openai-github-pr-review/: pyproject.toml
integrations/seo-agent/: .env  Readme.md  main.py  pyproject.toml  wrapper.py
integrations/speaker-diarization/: README.md  agent.py  project.json  pyproject.toml  utils.py
integrations/spotify-integration/: README.md  project.json  pyproject.toml  sportify-agent.py
integrations/startup-idea-analyser/: README.md  agent.py  crew_ai.py  project.json  pyproject.toml
integrations/stripe_payment_solution/: README.md  project.json  pyproject.toml
integrations/tortoise-ORM/: README.md  guest.py  hotel.py  models.py  pyproject.toml
integrations/user-public-repositories/: README.md  get_public_repositories.py  project.json  pyproject.toml
integrations/video-agent/: README.md  pyproject.toml
integrations/video-agent/video_rag/: agent.py  summary.py  utils.py
integrations/vidnote/: README.md  pyproject.toml
integrations/vidnote/vidnote/: agent.py
integrations/web-summarizer/: agent.py  pyproject.toml
integrations/website_validation/: README.md  agent.py  grammer_check_agent_helper.py  project.json  pyproject.toml  utils.py
python/: .pre-commit-config.yaml  .pylintrc  ISSUES_TEMPLATE.md  PULL_REQUESTS_TEMPLATE.md  README.md  TESTING.md  TESTING_UPDATED.md  TEST_COVERAGE_SUMMARY.md  dialogue_example.py  generate_api_docs.py  mkdocs.yml  pyproject.toml  test_runner.py  testing.py  testing2.py
python/deployment/: README.md
python/deployment/docker/: Dockerfile  onbuild.Dockerfile
python/deployment/hello-agent/: .dockerignore  agent.py  requirements.txt
python/docs/: UPGRADING.md  addresses.md  agent-protocols.md  almanac-registration.md  booking-demo.md  installation.md  interval-tasks.md  remote-agents.md  storage.md
python/docs/css/: termynal-fast.css
python/docs/js/: termynal-fast.js
python/examples/: README.md
python/examples/01-first-agent/: main.py
python/examples/02-interval-task/: main.py
python/examples/03-multiple-agents/: main.py
python/examples/04-storage/: main.py
python/examples/05-send-msg/: main.py
python/examples/06-send-tokens/: main.py
python/examples/07-msg-verification/: main.py
python/examples/08-local-network-interaction/: agent1.py  agent2.py  sync_sender.py
python/examples/09-booking-protocol-demo/: query.py  restaurant.py  user.py
python/examples/10-cleaning-demo/: cleaner.py  user.py
python/examples/11-mailbox-agents/: alice.py  bob.py
python/examples/12-remote-agents/: agent1.py  agent2.py
python/examples/13-agent-name-service/: agent1.py  agent2.py
python/examples/14-broadcast/: main.py
python/examples/15-chit-chat-dialogue/: chat-agent.py  chat_agent.py  chit-agent.py  chit_agent.py  main.py
python/examples/15-wallet-messaging/: main.py
python/examples/16-on-query-proxy/: README.md  agent.py  proxy.py
python/examples/17-calling-local-agents/: agent.py  client.py
python/examples/17-stateful-communication/: Readme.md  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  chat_agent.py  chit_agent.py  main.py
python/examples/18-async-loops/: external_loop_attach.py  external_loop_run.py
python/examples/18-multi-agent-adapter/: README.md  project.json
python/examples/18-synchronous-interaction/: agent2.py
python/examples/19-rest-api/: README.md  agent.py
python/examples/20-mobility-agents/: static_agent.py  static_agent2.py  vehicle_agent.py
python/examples/20-send-and-receive/: main.py
python/examples/21-protocol-interactions/: main.py
python/examples/21-search/: README.md  charger_search_agent.py  (+4 more)
python/fetch-ai-engine/: pyproject.toml
python/scripts/: README.md  clean_docs.py  do_release.py  generate_api_docs.py  inspect_uagents.py  src_links_docs.py  upgrade.py
python/tests/: test_adapter_integration.py  test_agent.py  test_agent_address.py  test_agent_registration.py  test_bureau.py  test_communication.py  test_config.py  test_context.py  test_flakey_network_registration.py  test_manifest_creation.py  test_model.py  test_msg_verify.py  test_new_features_validation.py  test_protocol.py  test_protocol_spec.py  test_registration.py  test_rest.py  test_server.py  test_storage.py
python/uagents-adapter/: .gitignore  QUICKSTART.md  README.md  pyproject.toml
python/uagents-ai-engine/: README.md  pyproject.toml
python/uagents-core/: README.md  pyproject.toml
(+1319 files in other folders)
