[tool.poetry]
name = "nexus"
version = "0.1.0"
description = ""
authors = ["Ed FitzGerald <ejafitzgerald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
msgpack = "^1.0.4"
bech32 = "^1.2.0"
ecdsa = "^0.18.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pylint = "^2.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
