[tool.poetry]
name = "uagents"
version = "0.2.0"
description = "Lightweight framework for rapid agent-based development"
authors = ["Ed FitzGerald <edward.fitzgerald@fetch.ai>", "James Riehl <james.riehl@fetch.ai>", "Alejandro Morales <alejandro.madrigal@fetch.ai>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
msgpack = "^1.0.4"
bech32 = "^1.2.0"
ecdsa = "^0.18.0"
apispec = "^6.0.2"
uvicorn = "^0.19.0"
aiohttp = "^3.8.3"
cosmpy = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
pylint = "^2.15.3"
mkdocs = "^1.4.2"

[tool.poetry.group.orm.dependencies]
tortoise-orm = "^0.19.2"

[tool.poetry.group.geo.dependencies]
geopy = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"