[project]
name = "uagents"
version = "0.22.4"
description = "Lightweight framework for rapid agent-based development"
authors = [
    { name = "Ed FitzGerald", email = "edward.fitzgerald@fetch.ai" },
    { name = "James Riehl", email = "james.riehl@fetch.ai" },
    { name = "Alejandro Morales", email = "alejandro.madrigal@fetch.ai" },
    { name = "Florian Wilde", email = "florian.wilde@fetch.ai" },
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "uagents_core (>=0.3.0)",
    "pydantic (>=2.8,<3.0)",
    "uvicorn (>=0.30.1,<1.0)",
    "aiohttp (>=3.8.3,<4.0)",
    "cosmpy (>=0.9.3,<1.0)",
]

[project.optional-dependencies]
all = ["fetchai-babble >=0.4.5"]
wallet = ["fetchai-babble >=0.4.5"]

[project.urls]
homepage = "https://fetch.ai"
repository = "https://github.com/fetchai/uAgents"
documentation = "https://fetch.ai/docs"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-order = "^1.3.0"
coverage = { version = "^7.6.12", extras = ["toml"] }
ruff = "^0.11.0"
pre-commit = "^4.1.0"
pydoc-markdown = "^4.8.2"

# [tool.poetry]
# requires-poetry = ">=2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle (Errors, Warnings)
    "E",
    "W",
    # Pyflakes
    "F",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pep8-naming
    "N",
    # pylint
    "PL",
]
ignore = ["PLR0913", "PLR0912", "PLR0911", "PLR2004", "PLR0915"]

[tool.ruff.lint.pycodestyle]
max-line-length = 100

[tool.coverage.run]
source = ["src/uagents", "src\\uagents"]
omit = ["*/__init__.py", "*/experimental/*"]
relative_files = true

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
