[tool.poetry]
name = "agent-token-payments"
version = "0.1.0"
description = ""
authors = ["Edward FitzGerald <edward.fitzgerald@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
uagents = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
