[tool.poetry]
name = "bert-base-cased-uagent-integration"
version = "0.0.1"
description = "BERT base model (cased) integration with fetch.ai uagent"
authors = ["Laxmikant Tripathi <laxmikant.tripathi6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
requests = "^2.31.0"
uagents = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
