[tool.poetry]
name = "code-navigator"
version = "0.1.0"
description = ""
authors = ["James Riehl <james.riehl@fetch.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
openai = "^1.3.6"
requests = "^2.31.0"
coloredlogs = "^15.0.1"
aiohttp = "^3.9.1"
langchain = "^0.1.12"
langchain-openai = "^0.0.8"
chromadb = "^0.4.24"
uagents = "^0.11.0"
uagents-ai-engine = "^0.1.2"
gitpython = "^3.1.42"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
