[tool.poetry]
name = "uagents-ai-engine"
version = "0.1.2"
description = "Integrating AI-Engine with UAgents"
authors = ["Fetch.AI Limited"]
license = "Apache 2.0"
readme = "README.md"
keywords = ["uagents", "agents", "ai", "ai-engine", "fetch.ai"]
packages = [{include = "ai_engine", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"
pydantic = "^1.10.2"
