[tool.poetry]
name = "holiday-integrations"
version = "0.1.0"
description = "A starter template for creating holiday integration examples"
authors = ["Fetch.AI Limited"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
google-search-results = "^2.4.2"
langchain = "^0.0.149"
openai = "^0.27.4"
uagents = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
