[tool.poetry]
name = "langchain-rag"
version = "0.1.0"
description = "langchain-rag-uagent-integration"
authors = ["Fetch.AI Limited"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "^0.17.1"
requests = "^2.31.0"
langchain = "^0.3.7"
openai = "^1.54.5"
langchain-openai = "^0.2.9"
tiktoken = "^0.8.0"
cohere = "^5.11.4"
faiss-cpu = "^1.9.0.post1"
validators = "^0.34.0"
uagents-ai-engine = "^0.6.0"
unstructured = "^0.16.5"
langchain-community = "^0.3.7"
langchain-cohere = "^0.3.2"
