[tool.poetry]
name = "multi-agent-adapter"
version = "0.1.0"
description = "A starter template for creating multi-agent adapter system"
authors = ["Fetch.AI Limited"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
