[tool.poetry]
name = "tortoise-db"
version = "0.1.0"
description = ""
authors = ["Alejandro-Morales <alejandro.morales.mad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uagents = "*"
black = "^24.3.0"
tortoise-orm = "^0.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
