[tool.poetry]
name = "github-user-repository-uagent-integration"
version = "0.1.0"
description = "Query all public repositories from a user"
authors = ["Jonathan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
uagents-ai-engine = "^0.5.0"
requests = "^2.32.3"
uagents = "^0.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
