[tool.poetry]
name = "uagents-ai-engine"
version = "0.10.0"
description = "Integrating AI-Engine with UAgents"
authors = ["Fetch.AI Limited"]
license = "Apache 2.0"
readme = "README.md"
keywords = ["uagents", "agents", "ai", "ai-engine", "fetch.ai"]
packages = [{include = "ai_engine", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
uagents = "^0.22.0"
pydantic = ">=2.8,<3.0"
